# quadsbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.armv6  README.md  main.py  pyproject.toml
quadsbot/: date_utils.py  message_utils.py  user.py
quadsbot/handlers/: check.py  clear.py  leaderboard.py  location.py  message.py  setadmin.py  stats.py
scripts/: build.sh  release
src/: lib.rs  main.rs
telegram/: Cargo.toml
telegram/examples/: simple.rs
telegram/src/: api.rs  errors.rs  lib.rs  stream.rs  types.rs
telegram/src/types/: chat.rs  message.rs  mod.rs  update.rs  user.rs
