[package]
name = "quadsbot"
version = "0.1.0"
authors = ["Oliver Marshall <olivershawmarshall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
telegram-bot = "0.7"
chrono = "0.4"
