[package]
name = "quadsbot"
version = "0.3.0"
authors = ["Oliver Marshall <olivershawmarshall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
env_logger = { version = "0.7", default-features = false, features = ["atty", "humantime"] }
telegram = { path = "./telegram" }

[dev-dependencies]
json = "0.12"

[workspace]
members = ["telegram"]
