[tool.poetry]
name = "quadsbot"
version = "0.5.0"
description = ""
authors = ["Oliver Marshall <olivershawmarshall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
