[tool.poetry]
name = "quadsbot"
version = "0.8.1"
description = ""
authors = ["Oliver Marshall <olivershawmarshall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.11"
pytz = "^2022.1"
timezonefinder = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
