[package]
name = "telegram"
version = "0.1.0"
authors = ["Oliver Marshall <olivershawmarshall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
attohttpc = "0.14"
json = "0.12"


[dev-dependencies]
env_logger = "0.7"
